# rpi-kiosk-os-mainapp

./: CMakeLists.txt  Main.qml  README.md  main.cpp
